<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            style="@style/HintText"
            android:hint="@string/user_name"
            android:nextFocusDown="@id/whipped_cream" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whipped_cream"
            style="@style/BodyTextStyle"
            android:nextFocusDown="@id/chocolate"
            android:onClick="onCheckboxClicked"
            android:text="@string/whipped_cream" />

        <CheckBox
            android:id="@+id/chocolate"
            style="@style/BodyTextStyle"
            android:nextFocusDown="@id/decrement_button"
            android:onClick="onCheckboxClicked"
            android:text="@string/chocolate" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:nextFocusRight="@id/increment_button"
                android:onClick="decrement"
                android:text="@string/decrement"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/BodyTextStyle"
                android:layout_gravity="center"
                android:paddingLeft="0dp"
                android:text="1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:nextFocusDown="@id/order_button"
                android:onClick="increment"
                android:text="@string/increment"
                android:textAllCaps="true" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/total_price" />

        <TextView
            android:id="@+id/price_view"
            style="@style/BodyTextStyle"
            android:padding="8dp"
            android:text="$5"
            android:textStyle="bold" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:nextFocusUp="@id/increment_button"
            android:onClick="submitOrder"
            android:text="@string/order_button"
            android:textAllCaps="true" />

    </LinearLayout>
</ScrollView>